--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-hi-zone.authentication.v2.url=http://api.ibeenhi.com/hi-zone-api/authentication-v2
+hi-zone.authentication.v2.url=https://api.ibeenhi.com/hi-zone-api/authentication-v2
 hi-zone.authentication.v2.paths.decode=/token/decode
 hi-zone.authentication.v2.paths.login=/user/login
 hi-zone.authentication.v2.paths.refresh=/token/refresh
