Accepting cookie authentication

--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -29,3 +29,4 @@ hi-zone.authentication.v2.paths.login=/user/login
 hi-zone.authentication.v2.paths.refresh=/token/refresh
 hi-zone.authentication.v2.username=iamhi
 hi-zone.authentication.v2.password=admin
+hi-zone.authentication.v2.accessTokenCookieName=access-token-cookie
