--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.0.5</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.github.iamhi.hizone</groupId>
 	<artifactId>terreplein-v2</artifactId>
@@ -23,7 +23,7 @@
 	<name>terreplein-v2</name>
 	<description>Combined apps project</description>
 	<properties>
-		<java.version>19</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
